--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,4 @@
 include AUTHORS CHANGES README INSTALL LICENSE
-recursive-include metadata *.py *.html *.js *.css
-include docs/Makefile
-recursive-include docs/source *
 recursive-include metadata/templates *
 recursive-include metadata/static *
+recursive-include metadata/templatetags *
